--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Julius+Sans+One&family=Sigmar+One&family=Space+Mono&family=Special+Elite&display=swap');
+
 * {
   padding: 0;
   margin: 0;
