completed landing page

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Julius+Sans+One&family=Sigmar+One&family=Space+Mono&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Concert+One&family=Julius+Sans+One&family=Sigmar+One&family=Space+Mono&family=Special+Elite&display=swap');
 
 * {
   padding: 0;
